tests/expectations/compiler/type_inference/unsuffixed_literals_overflow.out
Error [ETYC0372008]: The value 256 is not a valid `u8`
    --> compiler-test:4:22
     |
   4 |         let a0: u8 = 256;
     |                      ^^^
Error [ETYC0372008]: The value 256 is not a valid `u8`
    --> compiler-test:5:24
     |
   5 |         let a1 = 1u8 + 256;
     |                        ^^^
Error [ETYC0372008]: The value 65536 is not a valid `u16`
    --> compiler-test:7:23
     |
   7 |         let a2: u16 = 65_536;
     |                       ^^^^^^
Error [ETYC0372008]: The value 65536 is not a valid `u16`
    --> compiler-test:8:25
     |
   8 |         let a3 = 1u16 + 65_536;
     |                         ^^^^^^
Error [ETYC0372008]: The value 4294967296 is not a valid `u32`
    --> compiler-test:10:23
     |
  10 |         let a4: u32 = 4_294_967_296;
     |                       ^^^^^^^^^^^^^
Error [ETYC0372008]: The value 4294967296 is not a valid `u32`
    --> compiler-test:11:25
     |
  11 |         let a5 = 1u32 + 4_294_967_296;
     |                         ^^^^^^^^^^^^^
Error [ETYC0372008]: The value 18446744073709551616 is not a valid `u64`
    --> compiler-test:13:23
     |
  13 |         let a6: u64 = 18_446_744_073_709_551_616;
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372008]: The value 18446744073709551616 is not a valid `u64`
    --> compiler-test:14:25
     |
  14 |         let a7 = 1u64 + 18_446_744_073_709_551_616;
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372008]: The value 340282366920938463463374607431768211456 is not a valid `u128`
    --> compiler-test:16:24
     |
  16 |         let a8: u128 = 340_282_366_920_938_463_463_374_607_431_768_211_456;
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372008]: The value 340282366920938463463374607431768211456 is not a valid `u128`
    --> compiler-test:17:26
     |
  17 |         let a9 = 1u128 + 340_282_366_920_938_463_463_374_607_431_768_211_456;
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372008]: The value 128 is not a valid `i8`
    --> compiler-test:20:23
     |
  20 |         let a10: i8 = 128;
     |                       ^^^
Error [ETYC0372008]: The value 128 is not a valid `i8`
    --> compiler-test:21:25
     |
  21 |         let a11 = 1i8 + 128;
     |                         ^^^
Error [ETYC0372008]: The value 32768 is not a valid `i16`
    --> compiler-test:23:24
     |
  23 |         let a12: i16 = 32_768;
     |                        ^^^^^^
Error [ETYC0372008]: The value 32768 is not a valid `i16`
    --> compiler-test:24:26
     |
  24 |         let a13 = 1i16 + 32_768;
     |                          ^^^^^^
Error [ETYC0372008]: The value 2147483648 is not a valid `i32`
    --> compiler-test:26:24
     |
  26 |         let a14: i32 = 2_147_483_648;
     |                        ^^^^^^^^^^^^^
Error [ETYC0372008]: The value 2147483648 is not a valid `i32`
    --> compiler-test:27:26
     |
  27 |         let a15 = 1i32 + 2_147_483_648;
     |                          ^^^^^^^^^^^^^
Error [ETYC0372008]: The value 9223372036854775808 is not a valid `i64`
    --> compiler-test:29:24
     |
  29 |         let a16: i64 = 9_223_372_036_854_775_808;
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372008]: The value 9223372036854775808 is not a valid `i64`
    --> compiler-test:30:26
     |
  30 |         let a17 = 1i64 + 9_223_372_036_854_775_808;
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372008]: The value 170141183460469231731687303715884105728 is not a valid `i128`
    --> compiler-test:32:25
     |
  32 |         let a18: i128 = 170_141_183_460_469_231_731_687_303_715_884_105_728;
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372008]: The value 170141183460469231731687303715884105728 is not a valid `i128`
    --> compiler-test:33:27
     |
  33 |         let a19 = 1i128 + 170_141_183_460_469_231_731_687_303_715_884_105_728;
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372008]: The value 1 is not a valid `group`
    --> compiler-test:36:26
     |
  36 |         let a20: group = 1;
     |                          ^
Error [ETYC0372008]: The value 1 is not a valid `group`
    --> compiler-test:37:28
     |
  37 |         let a21 = 0group + 1;
     |                            ^
Error [ETYC0372008]: The value 256 is not a valid `u8`
    --> compiler-test:40:25
     |
  40 |         for i: u8 in 1..256 {}
     |                         ^^^
